# ahocorasick-ner

./: .gitignore  AUDIT.md  CHANGELOG.md  FAQ.md  LICENSE  MAINTENANCE_REPORT.md  QUICK_FACTS.md  README.md  SUGGESTIONS.md  ahocorasick_ner.py  pyproject.toml  setup.py
.github/workflows/: build_tests.yml  coverage.yml  install_tests.yml  opm-check.yml  publish_stable.yml  release-preview.yml  release_workflow.yml  repo-health.yml
ahocorasick_ner/: __init__.py  automaton.py  datasets.py  numpy_backend.py  onnx_backend.py  opm.py  version.py
docs/: DATASET_REFERENCE.md  algorithms.md  api-reference.md  backends.md  datasets.md  examples.md  getting-started.md  index.md  integration.md  performance.md  troubleshooting.md
examples/: basic_usage.py  benchmark.py  dataset_filtering_example.py  numpy_backend.py  onnx_export.py
test/: conftest.py
test/unittests/: test_automaton.py  test_datasets.py  test_edge_cases.py  test_ner.py  test_numpy_backend.py  test_opm.py  test_version.py
